Validate more pre-introspection errors (#3253)
* Validate simple pre-introspection errors